Tue Mar  3 21:31:53 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * examples/PICML/AntiSPAM/descriptors/e2e/e2e-template-assembly1.unique:
        * examples/PICML/AntiSPAM/descriptors/e2e/e2e-template-assembly2.unique:

	  . Removed the .cdp extension from the configuration name.
	
        * examples/PICML/AntiSPAM/descriptors/e2e/generate-DnC.sh:

	  . Added support to generating the antispam configuration files
	    using the template engine.

Tue Mar  3 20:54:51 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/utils/unite/Unit_Test_Evaluator.cpp:

          . Fixed compilation errors on non-Windows systems.

        * docs/manual/manual.pdf:
        * docs/manual/quickstart.tex:

          . Updated the documentation.

Tue Mar  3 20:07:50 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * CUTS.mwc:
        * CUTS_CoSMIC.mwc:
        * CUTS_Runtime_Arch.mwc:

          . Re-designed the workspace layout so that you don't need
            to define some features if you are building a specific
            workspace.

        * utils/BMW/assemblies/CUTS.Data/CUTS/Data/UnitTesting/UnitTestEvaluator.cs:
        * utils/BMW/assemblies/CUTS.Data/CUTS/Data/VariableTable.cs:

          . Bug fixes.

        * utils/BMW/website/analysis.aspx:
        * utils/BMW/website/analysis.aspx.cs:
        * utils/BMW/website/logformats.aspx.cs:
        * utils/BMW/website/unittest.aspx.cs:

          . Tried to cleanup the webpage.

        * cuts_common.mwb:

          Removed this file.

Tue Mar  3 19:46:20 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * MPC/config/cuts_antispam.mpb:

          . Missing base project.

Tue Mar  3 18:31:28 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * default.features:

          . Disabled xerces3 by default over xerces2.

Tue Mar  3 18:26:07 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/utils/template/Template_App_Options.h: